Cleaned up jsdoc, reformatted anonymous closures
http://devnull.absolventa.de/2014/03/25/jsdoc-and-the-revealing-module-pattern/

/**
 * @namespace Absolventa
 */
(function() {
    window.Absolventa = window.Absolventa || {};
}());

/**
 * @namespace Urlify
 * @memberof Absolventa
 * @requires {@link Absolventa.Helpers}
 */
(function() {
    "use strict";
    Absolventa.Urlify = (function() {
        var init;

        /**
         * @function init
         * @memberof! Absolventa.Urlify
         * @param {string} foo
         * @example
         * Absolventa.Urlify.init('hello world')
         */
        init = function(foo) {
          // Magick!
        };

        return {
          init : init
        };
    }());
}());

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2>Hog Trough Orders</h2>
     </div>
     <div id="main" class="container">
-        <a href="javascript:GO.newGroupOrder()">Start new group order</a>
+        <a href="javascript:HT.GroupOrder.new()">Start new group order</a>
     </div>
     <!-- START toggle-able html -->
     <!-- START group orders view html -->
