--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- START toggle-able html -->
     <!-- START group orders view html -->
     <div id="ordersview" class="container" hidden>
-        <table>
+        <table class="table table-striped table-bordered table-hover table-condensed">
             <thead>
                 <tr>
                     <th></th>
