--- a/index.html
+++ b/index.html
@@ -18,28 +18,24 @@
     <div id="main" class="container">
         <a href="javascript:HT.GroupOrder.new()">Start new group order</a>
     </div>
-    <!-- START toggle-able html -->
     <!-- START group orders view html -->
     <div id="ordersview" class="container" hidden>
-        <table class="table table-striped table-bordered table-hover table-condensed">
+        <table id="0" class="table table-striped table-bordered table-hover table-condensed">
+            <caption></caption>
             <thead>
                 <tr>
-                    <th></th>
-                    <th></th>
-                    <th>Order</th>
-                    <th>Price</th>
-                    <th></th>
-                    <th></th>
+                    <th class="col-md-2">Placer</th>
+                    <th class="col-md-7">Order</th>
+                    <th class="col-md-1">Price</th>
+                    <th class="col-md-1" title="7% (MA State 6.25% + local option 0.75%)">Tax</th>
+                    <th class="col-md-1" title="price + tax">Total</th>
                 </tr>
             </thead>
             <tfoot>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <th colspan="2"></th>
+                    <th colspan="2">Grand Total:</th>
+                    <th></th>
                 </tr>
             </tfoot>
             <tbody></tbody>
@@ -103,9 +99,9 @@
         </form>
     </div>
     <!-- END new group order html -->
-    <!-- END toggle-able html -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="globals.js"></script>
     <script src="javascript.js"></script>
 </body>
 
