--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <tr>
                     <th colspan="2"></th>
                     <th colspan="2">Grand Total:</th>
-                    <th></th>
+                    <th class="grand-total"></th>
                 </tr>
             </tfoot>
             <tbody></tbody>
