--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <!-- START group orders view html -->
     <div id="ordersview" class="container" hidden>
-        <table id="0" class="table table-striped table-bordered table-hover table-condensed">
+        <table id="default-table" class="table table-striped table-bordered table-hover table-condensed">
             <caption></caption>
             <thead>
                 <tr>
