--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <option value="5">Five</option>
                         <option value="10">Ten</option>
                         <option value="20">Twenty</option>
-                        <option value="*" selected>Any</option>
+                        <option value="99" selected>Any</option>
                     </select>
                 </div>
             </div>
