--- a/index.html
+++ b/index.html
@@ -1,108 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>
-        Hog Trough Orders
-    </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link type="stylesheet" src="style.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
     <div class="container">
-        <h2>Hog Trough Orders</h2>
-    </div>
-    <div id="main" class="container">
-        <a href="javascript:HT.GroupOrder.new()">Start new group order</a>
-    </div>
-    <!-- START group orders view html -->
-    <div id="ordersview" class="container" hidden>
-        <table id="default-table" class="table table-striped table-bordered table-hover table-condensed">
+        <h2>Hog Trough</h2>
+        <table hidden>
             <caption></caption>
             <thead>
                 <tr>
-                    <th class="col-md-2">Placer</th>
-                    <th class="col-md-7">Order</th>
-                    <th class="col-md-1">Price</th>
-                    <th class="col-md-1" title="7% (MA State 6.25% + local option 0.75%)">Tax</th>
-                    <th class="col-md-1" title="price + tax">Total</th>
+                    <th>#</th>
+                    <th>Placer</th>
+                    <th>Order</th>
+                    <th>Price</th>
+                    <th>Tax</th>
+                    <th>Total</th>
                 </tr>
             </thead>
-            <tfoot>
-                <tr>
-                    <th colspan="2"></th>
-                    <th colspan="2">Grand Total:</th>
-                    <th class="grand-total"></th>
-                </tr>
-            </tfoot>
+            <tfoot></tfoot>
             <tbody></tbody>
         </table>
-    </div>
-    <!-- END group orders view html -->
-    <!-- START new group order html -->
-    <div id="newgrouporder" class="container" hidden>
-        <form id="newgrouporderform" style="display">
-            <div class="form-group row">
-                <label for="restaurant" class="col-sm-2 col-form-label">Restaurant:</label>
+
+        <form hidden>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="restaurant">Restaurant</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="restaurant" name="restaurant"></select>
-                    <a href="https://www.google.com" id="menulink" target="_blank">Menu Link</a>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="numberOfOrders" class="col-sm-2 col-form-label">Maximum Number of Orders:</label>
-                <div class="col-sm-10">
-                    <select class="form-control" id="numberOfOrders" name="numberOfOrders">
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                        <option value="10">Ten</option>
-                        <option value="20">Twenty</option>
-                        <option value="99" selected>Any</option>
+                    <select class="form-control" id="restaurant">
+                        <option>--TBD--</option>
                     </select>
                 </div>
             </div>
-            <div class="form-group row">
-                <label for="orderByTime" class="col-sm-2 col-form-label">Order by date/time</label>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="order">Order:</label>
                 <div class="col-sm-10">
-                    <input class="form-control" type="datetime-local" id="orderByTime" name="orderByTime">
+                    <input type="text" class="form-control" id="order" placeholder="Pizza, salad, etc.">
                 </div>
             </div>
-            <div class="form-group row">
-                <label for="orderPickupTime" class="col-sm-2 col-form-label">Order pickup date/time</label>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="price">Price:</label>
                 <div class="col-sm-10">
-                    <input class="form-control" type="datetime-local" id="orderPickupTime" name="orderPickupTime">
+                    <input type="text" class="form-control" id="price" placeholder="0.00" pattern="^\d+\.\d{2}$">
                 </div>
             </div>
-            <div class="form-group row">
-                <label for="orderTextGrp" class="col-sm-2 col-form-label">Order:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="orderTextGrp" placeholder="Order description" name="orderText">
+            <div>
+                <div class="col-sm-offset-2 col-sm-10">
+                    <div class="checkbox">
+                        <label><input type="checkbox"> Remember me</label>
+                    </div>
                 </div>
             </div>
-            <div class="form-group row">
-                <label for="orderPriceGrp" class="col-sm-2 col-form-label">Price:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="orderPriceGrp" placeholder="0.00" name="orderPrice" pattern="\d+\.\d{2}">
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary">File New Group Order</button>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Submit</button>
                 </div>
             </div>
         </form>
+
     </div>
-    <!-- END new group order html -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="globals.js"></script>
-    <script src="javascript.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+
+
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+
+
+    </script>
+    <script src="globals.js">
+
+
+    </script>
+    <script src="javascript.js">
+
+
+    </script>
 </body>
 
 </html>
