--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <form hidden>
             <div class="form-group">
-                <label class="control-label col-sm-2" for="restaurant">Restaurant</label>
+                <label class="control-label col-sm-2" for="restaurant">Restaurant:</label>
                 <div class="col-sm-10">
                     <select class="form-control" id="restaurant">
                         <option>--TBD--</option>
