--- a/index.html
+++ b/index.html
@@ -71,11 +71,19 @@
 
 
     </script>
-    <script src="globals.js">
+    <script src="javascript/globals.js">
 
 
     </script>
-    <script src="javascript.js">
+    <script src="javascript/utilities.js">
+
+
+    </script>
+    <script src="javascript/restaurant.js">
+
+
+    </script>
+    <script src="javascript/javascript.js">
 
 
     </script>
