--- a/index.html
+++ b/index.html
@@ -67,6 +67,28 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script id="global-variable">
+        const ORDERS_ARR = [
+            [
+                "PAPA GINO'S", // restaurant (key 1)
+                1532469292249, // filed time (key 2)
+                1533117500000, // order by time in milliseconds
+                1533117600000, // pickup time in milliseconds
+                "Smith,John", // userID
+                "pizza", // order text
+                9.99 // price
+            ],
+            ["BERTUCCI'S", 1532469292000, 1533117300000, 1533117400000, "Smith,Lisa", "giambotta", 18.99],
+            ["PAPA GINO'S", 1532469292249, "", "", "Griffin,Kevin", "Large pizza", 11.99]
+        ];
+
+        const USER_ID = "Griffin,Kevin";
+
+        const REST_ARR = [
+            ["BERTUCCI'S", "https://www.bertuccis.com"],
+            ["PAPA GINO'S", "https://www.papaginos.com"]
+        ];
+    </script>
     <script src="javascript/namespace.js"></script>
     <script src="javascript/globals.js"></script>
     <script src="javascript/utilities.js"></script>
