--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <select class="form-control" id="restaurant">
                         <option>--TBD--</option>
                     </select>
+                    <a id="menu-link" target="_blank">Menu link</a>
                 </div>
             </div>
             <div class="form-group">
@@ -90,7 +91,6 @@
         ];
     </script>
     <script src="javascript/namespace.js"></script>
-    <script src="javascript/globals.js"></script>
     <script src="javascript/utilities.js"></script>
     <script src="javascript/main.js"></script>
     <script src="javascript/restaurant.js"></script>
