--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <tbody></tbody>
         </table>
 
-        <form hidden>
+        <form class="form-horizontal" action="" hidden>
+            <input id="ord-key" type="hidden">
             <div class="form-group">
                 <label class="control-label col-sm-2" for="restaurant">Restaurant:</label>
                 <div class="col-sm-10">
@@ -61,7 +62,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script id="global-variable">
+    <script id="global-variables">
         const ORDERS_ARR = [
             [
                 "PAPA GINO'S", // restaurant (key 1)
@@ -85,9 +86,9 @@
     </script>
     <script src="javascript/namespace.js"></script>
     <script src="javascript/utilities.js"></script>
-    <script src="javascript/main.js"></script>
     <script src="javascript/restaurant.js"></script>
     <script src="javascript/orders.js"></script>
+    <script src="javascript/main.js"></script>
 
 </body>
 
