--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@
             <tbody></tbody>
         </table>
 
-        <form class="form-horizontal" action="" hidden>
+        <form id="form-order" class="form-horizontal" action="" hidden>
             <input id="ord-key" type="hidden">
             <div class="form-group">
                 <label class="control-label col-sm-2" for="restaurant">Restaurant:</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="restaurant">
-                        <option>--TBD--</option>
-                    </select>
+                    <select class="form-control" id="restaurant"></select>
                     <a id="menu-link" target="_blank">Menu link</a>
                 </div>
             </div>
@@ -54,6 +52,7 @@
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-default">Submit</button>
+                    <button type="button" class="btn btn-default">Exit</button>
                 </div>
             </div>
         </form>
@@ -80,6 +79,7 @@
         const USER_ID = "Griffin,Kevin";
 
         const REST_ARR = [
+            ["--TBD--", "www.google.com"],
             ["BERTUCCI'S", "https://www.bertuccis.com"],
             ["PAPA GINO'S", "https://www.papaginos.com"]
         ];
