--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <label class="control-label col-sm-2" for="restaurant">Restaurant:</label>
                 <div class="col-sm-10">
                     <select class="form-control" id="restaurant"></select>
-                    <a id="menu-link" target="_blank">Menu link</a>
+                    <a id="menu-link" target="_blank" href="http://www.google.com">Menu link</a>
                 </div>
             </div>
             <div class="form-group">
@@ -84,7 +84,7 @@
         const USER_ID = "Griffin,Kevin";
 
         const REST_ARR = [
-            ["--TBD--", "www.google.com"],
+            ["--TBD--", "http://www.google.com"],
             ["BERTUCCI'S", "https://www.bertuccis.com"],
             ["PAPA GINO'S", "https://www.papaginos.com"]
         ];
