--- a/index.html
+++ b/index.html
@@ -39,8 +39,35 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" for="restaurant">Restaurant:</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="restaurant"></select>
+                    <select  id="restaurant" class="form-control"></select>
                     <a id="menu-link" target="_blank" href="http://www.google.com">Menu link</a>
+                </div>
+            </div>
+            <div id="num-orders" class="form-group row" hidden>
+                <label for="numberOfOrders" class="col-sm-2 col-form-label">Maximum Number of Orders:</label>
+                <div class="col-sm-10">
+                    <select class="form-control" id="numberOfOrders" name="numberOfOrders">
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                        <option value="4">Four</option>
+                        <option value="5">Five</option>
+                        <option value="10">Ten</option>
+                        <option value="20">Twenty</option>
+                        <option value="99" selected>Any</option>
+                    </select>
+                </div>
+            </div>
+            <div id="order-by-time" class="form-group row" hidden>
+                <label for="orderByTime" class="col-sm-2 col-form-label">Order by date/time</label>
+                <div class="col-sm-10">
+                    <input class="form-control" type="datetime-local" id="orderByTime" name="orderByTime">
+                </div>
+            </div>
+            <div id="pickup-time" class="form-group row" hidden>
+                <label for="orderPickupTime" class="col-sm-2 col-form-label">Order pickup date/time</label>
+                <div class="col-sm-10">
+                    <input class="form-control" type="datetime-local" id="orderPickupTime" name="orderPickupTime">
                 </div>
             </div>
             <div class="form-group">
@@ -91,7 +118,7 @@
     </script>
     <script src="javascript/namespace.js"></script>
     <script src="javascript/utilities.js"></script>
-    <script src="javascript/restaurant.js"></script>
+    <script src="javascript/restaurants.js"></script>
     <script src="javascript/orders.js"></script>
     <script src="javascript/main.js"></script>
 
