--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
                 </div>
             </div>
             <div id="order-by-time" class="form-group row" hidden>
-                <label for="orderByTime" class="col-sm-2 col-form-label">Order by date/time</label>
+                <label for="order-by-time-input" class="col-sm-2 col-form-label">Order by date/time</label>
                 <div class="col-sm-10">
-                    <input class="form-control" type="datetime-local" id="orderByTime" name="orderByTime">
+                    <input class="form-control" type="datetime-local" id="order-by-time-input" name="orderByTime">
                 </div>
             </div>
             <div id="pickup-time" class="form-group row" hidden>
-                <label for="orderPickupTime" class="col-sm-2 col-form-label">Order pickup date/time</label>
+                <label for="pickup-time-input" class="col-sm-2 col-form-label">Order pickup date/time</label>
                 <div class="col-sm-10">
-                    <input class="form-control" type="datetime-local" id="orderPickupTime" name="orderPickupTime">
+                    <input class="form-control" type="datetime-local" id="pickup-time-input" name="orderPickupTime">
                 </div>
             </div>
             <div class="form-group">
